--- a/beyesi/pom.xml
+++ b/beyesi/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>beyesi</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
